chore: separated gke related files into .kube.

--- a/.kube/service.yaml
+++ b/.kube/service.yaml
@@ -3,15 +3,15 @@ kind: Service
 metadata:
   creationTimestamp: null
   labels:
-    app: ${APP_ID}
-  name: ${APP_ID}
+    app: fastapi-server
+  name: fastapi-server
 spec:
   ports:
   - port: 80
     protocol: TCP
     targetPort: 80
   selector:
-    app: ${APP_ID}
+    app: fastapi-server
   type: LoadBalancer
 status:
   loadBalancer: {}
