--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -28,11 +28,11 @@ jobs:
           python-version: '3.7'  
 
       - name: Set up cache
-        working-directory: api
         uses: actions/cache@master
+        id: cache
         with:
           path: ${{ env.pythonLocation}}/lib/python3.7/site-packages/*
-          key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
           restore-keys: |
             ${{ runner.os }}-pip-
             ${{ runner.os }}-
