add: cloud support in github actions.

--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -43,3 +43,14 @@ jobs:
         run: |
           echo "Installing dependencies and caching them."
           pip install -r requirements.txt
+
+      - name: GCP auth
+        uses: google-github-actions/auth@v0
+        with:
+          credentials_json: ${{ secrets.GCP_CREDENTIALS }}
+
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@v0
+
+      - name: 'Use gcloud CLI'
+        run: gcloud info
