Refactor repo with the best FastAPI configs (#38)
* feat: add basic locust script

* add README & config file

* [WIP] add kustomize overlays for exp 1

* fix: typos

* update Locust user class name, modified locust conf

* remove base hpa, update base kustomize

* update experiment 1's yamls

* add README for experimentation setup

* add report files

* rename base => base_1

* add yamls for exp 2

* update for grpc

* update post code to cover parameterized request

* update Dockerfiles

* update kustomize

* update dockerfiles

* fix indentation main.py

* fix indentation main.py

* fix indentation main.py

* update imagepullpolicy

* update tfs configs

* update tfs deployment args

* add deployments for experiment2

* fix typos

* fix typos

* add additional experiment setup

* add batch experiment 1

* update batch config

* add more configs

* feat: implemented deployment for the best fastapi settings.

* chore: PR comments.

Co-authored-by: Chansung Park <deep.diver.csp@gmail.com>

--- a/.kube/experiment_1/2vCPU+4GB+w2/Dockerfile
+++ b/.kube/experiment_1/2vCPU+4GB+w2/Dockerfile
@@ -3,7 +3,7 @@ FROM python:3.8
 WORKDIR /app
 
 # install dependencies
-COPY ./api/requirements.txt /app/requirements.txt
+COPY ./.kube/experiment_1/2vCPU+4GB+w2/requirements.txt /app/requirements.txt
 RUN pip install --no-cache-dir --upgrade -r /app/requirements.txt
 
 # copy fastAPI app codebase
